; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_EXI_Select.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_EXI_Select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@eximap = common dso_local global %struct.TYPE_3__* null, align 8
@EXI_FLAG_SELECT = common dso_local global i32 0, align 4
@EXI_CHANNEL_2 = common dso_local global i64 0, align 8
@EXI_DEVICE_0 = common dso_local global i64 0, align 8
@EXI_FLAG_ATTACH = common dso_local global i32 0, align 4
@EXI_FLAG_LOCKED = common dso_local global i32 0, align 4
@_exiReg = common dso_local global i32* null, align 8
@EXI_CHANNEL_0 = common dso_local global i64 0, align 8
@IRQ_EXI0_EXT = common dso_local global i32 0, align 4
@EXI_CHANNEL_1 = common dso_local global i64 0, align 8
@IRQ_EXI1_EXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @EXI_Select(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** @eximap, align 8
  %12 = load i64, i64* %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i64 %12
  store %struct.TYPE_3__* %13, %struct.TYPE_3__** %10, align 8
  %14 = load i32, i32* %9, align 4
  %15 = call i32 @_CPU_ISR_Disable(i32 %14)
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* @EXI_FLAG_SELECT, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %3
  %23 = load i32, i32* %9, align 4
  %24 = call i32 @_CPU_ISR_Restore(i32 %23)
  store i64 0, i64* %4, align 8
  br label %119

25:                                               ; preds = %3
  %26 = load i64, i64* %5, align 8
  %27 = load i64, i64* @EXI_CHANNEL_2, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %65

29:                                               ; preds = %25
  %30 = load i64, i64* %6, align 8
  %31 = load i64, i64* @EXI_DEVICE_0, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %48

33:                                               ; preds = %29
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load i32, i32* @EXI_FLAG_ATTACH, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %48, label %40

40:                                               ; preds = %33
  %41 = load i64, i64* %5, align 8
  %42 = call i64 @__exi_probe(i64 %41)
  %43 = icmp eq i64 %42, 0
  br i1 %43, label %44, label %47

44:                                               ; preds = %40
  %45 = load i32, i32* %9, align 4
  %46 = call i32 @_CPU_ISR_Restore(i32 %45)
  store i64 0, i64* %4, align 8
  br label %119

47:                                               ; preds = %40
  br label %48

48:                                               ; preds = %47, %33, %29
  %49 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = load i32, i32* @EXI_FLAG_LOCKED, align 4
  %53 = and i32 %51, %52
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %55, label %61

55:                                               ; preds = %48
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %57 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i32 0, i32 1
  %58 = load i64, i64* %57, align 8
  %59 = load i64, i64* %6, align 8
  %60 = icmp ne i64 %58, %59
  br i1 %60, label %61, label %64

61:                                               ; preds = %55, %48
  %62 = load i32, i32* %9, align 4
  %63 = call i32 @_CPU_ISR_Restore(i32 %62)
  store i64 0, i64* %4, align 8
  br label %119

64:                                               ; preds = %55
  br label %65

65:                                               ; preds = %64, %25
  %66 = load i32, i32* @EXI_FLAG_SELECT, align 4
  %67 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %68 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 8
  %70 = or i32 %69, %66
  store i32 %70, i32* %68, align 8
  %71 = load i32*, i32** @_exiReg, align 8
  %72 = load i64, i64* %5, align 8
  %73 = mul i64 %72, 5
  %74 = getelementptr inbounds i32, i32* %71, i64 %73
  %75 = load i32, i32* %74, align 4
  store i32 %75, i32* %8, align 4
  %76 = load i32, i32* %8, align 4
  %77 = and i32 %76, 1029
  %78 = load i64, i64* %6, align 8
  %79 = trunc i64 %78 to i32
  %80 = shl i32 128, %79
  %81 = or i32 %77, %80
  %82 = sext i32 %81 to i64
  %83 = load i64, i64* %7, align 8
  %84 = shl i64 %83, 4
  %85 = or i64 %82, %84
  %86 = trunc i64 %85 to i32
  store i32 %86, i32* %8, align 4
  %87 = load i32, i32* %8, align 4
  %88 = load i32*, i32** @_exiReg, align 8
  %89 = load i64, i64* %5, align 8
  %90 = mul i64 %89, 5
  %91 = getelementptr inbounds i32, i32* %88, i64 %90
  store i32 %87, i32* %91, align 4
  %92 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %93 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %92, i32 0, i32 0
  %94 = load i32, i32* %93, align 8
  %95 = load i32, i32* @EXI_FLAG_ATTACH, align 4
  %96 = and i32 %94, %95
  %97 = icmp ne i32 %96, 0
  br i1 %97, label %98, label %116

98:                                               ; preds = %65
  %99 = load i64, i64* %5, align 8
  %100 = load i64, i64* @EXI_CHANNEL_0, align 8
  %101 = icmp eq i64 %99, %100
  br i1 %101, label %102, label %106

102:                                              ; preds = %98
  %103 = load i32, i32* @IRQ_EXI0_EXT, align 4
  %104 = call i32 @IRQMASK(i32 %103)
  %105 = call i32 @__MaskIrq(i32 %104)
  br label %115

106:                                              ; preds = %98
  %107 = load i64, i64* %5, align 8
  %108 = load i64, i64* @EXI_CHANNEL_1, align 8
  %109 = icmp eq i64 %107, %108
  br i1 %109, label %110, label %114

110:                                              ; preds = %106
  %111 = load i32, i32* @IRQ_EXI1_EXT, align 4
  %112 = call i32 @IRQMASK(i32 %111)
  %113 = call i32 @__MaskIrq(i32 %112)
  br label %114

114:                                              ; preds = %110, %106
  br label %115

115:                                              ; preds = %114, %102
  br label %116

116:                                              ; preds = %115, %65
  %117 = load i32, i32* %9, align 4
  %118 = call i32 @_CPU_ISR_Restore(i32 %117)
  store i64 1, i64* %4, align 8
  br label %119

119:                                              ; preds = %116, %61, %44, %22
  %120 = load i64, i64* %4, align 8
  ret i64 %120
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1

declare dso_local i64 @__exi_probe(i64) #1

declare dso_local i32 @__MaskIrq(i32) #1

declare dso_local i32 @IRQMASK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
